style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto';
}

main {
    background-color: #f2f2f2;
}

form {
    height: 1086px;
    width: 428px;

    text-align: center;
}

.profile {
    background-image: url('src/Capturar.PNG');
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    height: 208px;
    margin-bottom: 80px;
    position: relative;

    display: flex;
    justify-content: center;
}

.pic {
    width: 169px;
    height: 169px;
    background-color: rgb(0, 0, 0);
    border: 4px solid #fff;
    position: absolute;
    border-radius: 100px;
    bottom: -35%;
    overflow: hidden;
}
.pic img {
    width: 169px;
    height: 240px;
}
.inputs{
    padding: 0 16px;
}
.input_container {
    width: 396px;
    height: 48px;
    padding: 0 16px;
    margin-bottom: 42px;
    display: flex;
    align-items: center;
    gap: 16px;
}

.icon,.icon img {
    width: 28px;
    height: 28px;
}

.content {
    display: flex;
    flex-direction: column;

    
}
span {
    text-align: left;
    font-size: 12px;
    color: #2E3E4B;
    font-weight: bold;
}

input{
    width: 328px;
    height: 28px;
    border: none;
    background-color: transparent;
    border-bottom: 1px solid #A40A63;
}

input:focus{
    outline: none;
    font-size: 16px;
    color: #676767;
}

button {
   margin-top: 50px;
   width: 396px;
   height: 52px;
   background-color: #A40A63;
   color: #fff;
   cursor: pointer;
   border: none;
   border-radius: 20px;
   font-size: 16px;
   font-weight: bold;
}

button:hover{
    background-color: #C50C77;
}

.mensage {
    color: red;
    font-weight: bolder ;
    position: absolute;
    display: none;
    left: 24%;
    animation: shake 1s ease;
}

@keyframes shake {
    0%, 100% {
        transform: translateX(0);
    }
    10%, 30%, 50%, 70%, 90% {
        transform: translateX(-10px);
    }
    20%, 40%, 60%, 80% {
        transform: translateX(10px);
    }
}

